--- a/dl_tuto_1_0_notebook_tutorial.ipynb
+++ b/dl_tuto_1_0_notebook_tutorial.ipynb
@@ -496,7 +496,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Running the app locally"
+        "### En local"
       ]
     },
     {
@@ -506,136 +506,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "You may be running Jupyter Notebook from an interactive coding environment like Gradient, Sagemaker or Salamander. You can also run a Jupyter Notebook server from your local computer. What's more, if you have installed Anaconda you don't even need to install Jupyter (if not, just `pip install jupyter`).\n",
+        "On peut exécuter les Jupyter Notebooks sur sa propore machine mais ce n'est pas recommandé, sauf pour les logiciels qui ne nécessitent pas trop de calculs.\n",
         "\n",
-        "You just need to run `jupyter notebook` in your terminal. Remember to run it from a folder that contains all the folders/files you will want to access. You will be able to open, view and edit files located within the directory in which you run this command but not files in parent directories.\n",
-        "\n",
-        "If a browser tab does not open automatically once you run the command, you should CTRL+CLICK the link starting with 'https://localhost:' and this will open a new tab in your default browser."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "4OFPcRoF0IYH",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### Creating a notebook"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "qgxvaFiv0IYI",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Click on 'New' in the upper left corner and 'Python 3' in the drop-down list (we are going to use a [Python kernel](https://github.com/ipython/ipython) for all our experiments).\n",
-        "\n",
-        "![new_notebook](https://github.com/fastai/course-v3/blob/master/nbs/dl1/images/notebook_tutorial/new_notebook.png?raw=1)\n",
-        "\n",
-        "Note: You will sometimes hear people talking about the Notebook 'kernel'. The 'kernel' is just the Python engine that performs the computations for you. "
-      ]
-    },
-    {
-      "metadata": {
-        "id": "4YgrwTis0IYJ",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### Shortcuts and tricks"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "7aNW-pUs0IYJ",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "#### Command Mode Shortcuts"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "qSqoEt_V0IYK",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "There are a couple of useful keyboard shortcuts in `Command Mode` that you can leverage to make Jupyter Notebook faster to use. Remember that to switch back and forth between `Command Mode` and `Edit Mode` with <kbd>Esc</kbd> and <kbd>Enter</kbd>."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "tV7vCu9d0IYK",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>m</kbd>: Convert cell to Markdown"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "MV1HPP2D0IYL",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>y</kbd>: Convert cell to Code"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "xD5V__cw0IYL",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>D</kbd>+<kbd>D</kbd>: Delete cell"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "ASL0Z0Ol0IYM",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>o</kbd>: Toggle between hide or show output"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "gQq6kmqB0IYN",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>Shift</kbd>+<kbd>Arrow up/Arrow down</kbd>: Selects multiple cells. Once you have selected them you can operate on them like a batch (run, copy, paste etc)."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "nAtfLckB0IYN",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>Shift</kbd>+<kbd>M</kbd>: Merge selected cells."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "6yU3U0Bp0IYO",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<kbd>Shift</kbd>+<kbd>Tab</kbd>: [press once] Tells you which parameters to pass on a function\n",
-        "<kbd>Shift</kbd>+<kbd>Tab</kbd>: [press three times] Gives additional information on the method"
+        "Dans le cas où c'est ce que vous souhaitez, installez Anaconda"
       ]
     },
     {
@@ -645,7 +518,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#### Cell Tricks"
+        "#### Quelques trucs utiles à savoir"
       ]
     },
     {
@@ -664,22 +537,12 @@
     },
     {
       "metadata": {
-        "id": "ftrytzZ00IYS",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "There are also some tricks that you can code into a cell."
-      ]
-    },
-    {
-      "metadata": {
         "id": "zpAwv6FW0IYT",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "`?function-name`: Shows the definition and docstring for that function"
+        "`?function-name`: pour voir la définition d'une fonction"
       ]
     },
     {
@@ -733,14 +596,36 @@
       "metadata": {
         "id": "Tdnibl7L0IYZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 231
+        },
+        "outputId": "e2f5f6d5-f583-492a-fcd5-56c890170ea6"
       },
       "cell_type": "code",
       "source": [
         "doc(ImageDataBunch)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h2 id=\"ImageDataBunch\" class=\"doc_header\"><code>class</code> <code>ImageDataBunch</code><a href=\"https://github.com/fastai/fastai/blob/master/fastai/vision/data.py#L85\" class=\"source_link\" style=\"float:right\">[source]</a><a class=\"source_link\" data-toggle=\"collapse\" data-target=\"#ImageDataBunch-pytest\" style=\"float:right; padding-right:10px\">[test]</a></h2><blockquote><p><code>ImageDataBunch</code>(<strong><code>train_dl</code></strong>:<a href=\"https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader\"><code>DataLoader</code></a>, <strong><code>valid_dl</code></strong>:<a href=\"https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader\"><code>DataLoader</code></a>, <strong><code>fix_dl</code></strong>:<a href=\"https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader\"><code>DataLoader</code></a>=<strong><em><code>None</code></em></strong>, <strong><code>test_dl</code></strong>:<code>Optional</code>[<a href=\"https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader\"><code>DataLoader</code></a>]=<strong><em><code>None</code></em></strong>, <strong><code>device</code></strong>:<a href=\"https://pytorch.org/docs/stable/tensor_attributes.html#torch-device\"><code>device</code></a>=<strong><em><code>None</code></em></strong>, <strong><code>dl_tfms</code></strong>:<code>Optional</code>[<code>Collection</code>[<code>Callable</code>]]=<strong><em><code>None</code></em></strong>, <strong><code>path</code></strong>:<code>PathOrStr</code>=<strong><em><code>'.'</code></em></strong>, <strong><code>collate_fn</code></strong>:<code>Callable</code>=<strong><em><code>'data_collate'</code></em></strong>, <strong><code>no_check</code></strong>:<code>bool</code>=<strong><em><code>False</code></em></strong>) :: <a href=\"https://docs.fast.ai/basic_data.html#DataBunch\"><code>DataBunch</code></a></p>\n",
+              "</blockquote>\n",
+              "<div class=\"collapse\" id=\"ImageDataBunch-pytest\"><div class=\"card card-body pytest_card\"><a type=\"button\" data-toggle=\"collapse\" data-target=\"#ImageDataBunch-pytest\" class=\"close\" aria-label=\"Close\"><span aria-hidden=\"true\">&times;</span></a><p>No tests found for <code>ImageDataBunch</code>. To contribute a test please refer to <a href=\"/dev/test.html\">this guide</a> and <a href=\"https://forums.fast.ai/t/improving-expanding-functional-tests/32929\">this discussion</a>.</p></div></div><p>DataBunch suitable for computer vision.</p>\n",
+              "<p><a href=\"https://docs.fast.ai/vision.data.html#ImageDataBunch\" target=\"_blank\" rel=\"noreferrer noopener\">Show in docs</a></p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "metadata": {
@@ -759,7 +644,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Line magics are functions that you can run on cells and take as an argument the rest of the line from where they are called. You call them by placing a '%' sign before the command. The most useful ones are:"
+        "iPython a quelques commandes \"[magic](https://ipython.readthedocs.io/en/stable/interactive/magics.html)\" qu'on utilise presque systématiquement dans les Notebooks.\n"
       ]
     },
     {
@@ -769,7 +654,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "`%matplotlib inline`: This command ensures that all matplotlib plots will be plotted in the output cell within the notebook and will be kept in the notebook when saved."
+        "`%matplotlib inline`: To enable the inline backend for usage with the IPython Notebook:"
       ]
     },
     {
@@ -789,7 +674,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "These three commands are always called together at the beginning of every notebook."
+        "Ces commandes commencent les Notebooks"
       ]
     },
     {
@@ -814,26 +699,32 @@
       },
       "cell_type": "markdown",
       "source": [
-        "`%timeit`: Runs a line a ten thousand times and displays the average time it took to run it."
+        "`%timeit`: \n",
+        "\n",
+        "Time execution of a Python statement or expression\n",
+        "Par défaut, la commande est répétée 7 fois mais on peut lui demander de répéter 1000 fois si on veut "
       ]
     },
     {
       "metadata": {
         "id": "o42UqkgM0IYj",
         "colab_type": "code",
-        "outputId": "fe172090-2ece-4322-f8a6-ba805dafc7f0",
-        "colab": {}
+        "outputId": "751f197f-2643-44c4-bcb0-fc3861817ca8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
         "%timeit [i+1 for i in range(1000)]"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "54.4 µs ± 1.37 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+            "10000 loops, best of 3: 61.2 µs per loop\n"
           ],
           "name": "stdout"
         }
@@ -846,15 +737,18 @@
       },
       "cell_type": "markdown",
       "source": [
-        "`%debug`: Allows to inspect a function which is showing an error using the [Python debugger](https://docs.python.org/3/library/pdb.html)."
+        "`%debug`: Activate the interactive [debugger](https://ipython.readthedocs.io/en/stable/interactive/magics.html)"
       ]
     },
     {
       "metadata": {
         "id": "T4KGBEAO0IYn",
         "colab_type": "code",
-        "outputId": "9463b4cd-78f2-477b-9760-5547a1eac7e3",
-        "colab": {}
+        "outputId": "3ffc44f6-366a-41e4-e4e2-e11e66542685",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
       },
       "cell_type": "code",
       "source": [
@@ -863,17 +757,17 @@
         "    b = 'string'\n",
         "    c = b+1"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "error",
           "ename": "TypeError",
-          "evalue": "must be str, not int",
+          "evalue": "ignored",
           "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-14-8d78ff778454>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'string'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m: must be str, not int"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-8d78ff778454>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'string'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
           ]
         }
       ]
@@ -882,8 +776,11 @@
       "metadata": {
         "id": "SNjAQlkV0IYq",
         "colab_type": "code",
-        "outputId": "7eb0f6e8-21d5-4007-ca84-5a553feef3e8",
-        "colab": {}
+        "outputId": "36519d5b-1d80-4c2c-abea-3955a3d6dcb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        }
       },
       "cell_type": "code",
       "source": [
@@ -894,13 +791,12 @@
         {
           "output_type": "stream",
           "text": [
-            "> <ipython-input-14-8d78ff778454>(4)<module>()\n",
-            "      1 for i in range(1000):\n",
-            "      2     a = i+1\n",
-            "      3     b = 'string'\n",
-            "----> 4     c = b+1\n",
-            "\n",
-            "ipdb> c\n"
+            "> \u001b[0;32m<ipython-input-12-8d78ff778454>\u001b[0m(4)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m      1 \u001b[0;31m\u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0m\u001b[0;32m      2 \u001b[0;31m    \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0m\u001b[0;32m      3 \u001b[0;31m    \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'string'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0m\u001b[0;32m----> 4 \u001b[0;31m    \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0m\n"
           ],
           "name": "stdout"
         }
