--- a/dl_tuto_1_lesson1_pets.ipynb
+++ b/dl_tuto_1_lesson1_pets.ipynb
@@ -1371,6 +1371,45 @@
     },
     {
       "metadata": {
+        "id": "d7iC1PhfUfec",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9uOiTKwUUdlP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "H8USpD6yUY3k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "HqnB4OnEQkUg",
         "colab_type": "code",
         "outputId": "07f1b2a4-65aa-40fa-b811-ae2e61dee1ec",
