--- a/dl_tuto_1_pour_commencer.ipynb
+++ b/dl_tuto_1_pour_commencer.ipynb
@@ -6,6 +6,7 @@
       "name": "dl_tuto_1_pour_commencer.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
